--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;500;600&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.7/dist/signature_pad.umd.min.js"></script>
 
 <style>
 body{font-family:'Prompt',sans-serif;background:#f4f6f9;}
 .navbar{background:#0d2c6c;}
-canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
+canvas{border:1px solid #ccc;border-radius:8px;width:100%;background:#fff;}
 .spinner-border-sm{width:1rem;height:1rem;}
 </style>
 </head>
@@ -23,7 +23,7 @@ canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
 <span class="navbar-brand">ระบบเสนอแฟ้มผู้อำนวยการ</span>
 <div>
 <button class="btn btn-light btn-sm me-2" onclick="openQRModal()">สร้างคิวอาร์โค้ด</button>
-<button id="loginBtn" class="btn btn-warning btn-sm" onclick="openLogin()">เข้าสู่ระบบเจ้าหน้าที่</button>
+<button class="btn btn-warning btn-sm" onclick="openOfficer()">ระบบเจ้าหน้าที่</button>
 </div>
 </nav>
 
@@ -38,42 +38,49 @@ canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
 
 <div id="registerPage"></div>
 <div id="listArea" class="mt-3"></div>
+<div id="officerArea" class="mt-3"></div>
 
 </div>
 
-<!-- MODALS -->
-
+<!-- LOGIN MODAL -->
 <div class="modal fade" id="loginModal">
 <div class="modal-dialog">
 <div class="modal-content p-3">
 <h5>เข้าสู่ระบบเจ้าหน้าที่</h5>
 <input id="phone" class="form-control mb-2" placeholder="เบอร์โทร">
-<button id="loginBtn2" class="btn btn-primary" onclick="login()">เข้าสู่ระบบ</button>
+<button class="btn btn-primary" onclick="login()">เข้าสู่ระบบ</button>
 </div>
 </div>
 </div>
 
+<!-- QR MODAL -->
 <div class="modal fade" id="qrModal">
 <div class="modal-dialog">
 <div class="modal-content p-3">
 <h5>สร้างคิวอาร์โค้ด</h5>
 <div>รหัสแฟ้ม: <b id="newFileId"></b></div>
 <input id="groupName" class="form-control mt-2" placeholder="ชื่อกลุ่มงาน">
-<button class="btn btn-primary mt-3" onclick="createQR()">สร้างคิวอาร์โค้ด</button>
+<button class="btn btn-primary mt-3" onclick="createQR()">สร้าง</button>
 <div id="qrBox" class="mt-3 text-center"></div>
 <div id="qrAction" class="mt-2 text-center"></div>
 </div>
 </div>
 </div>
 
+<!-- RETURN MODAL -->
 <div class="modal fade" id="returnModal">
 <div class="modal-dialog modal-lg">
 <div class="modal-content p-3">
 <h5>รับแฟ้มคืน</h5>
 <input id="receiver" class="form-control mb-2" placeholder="ชื่อผู้รับ">
-<canvas id="sigCanvas" height="150"></canvas>
-<button class="btn btn-secondary mt-2" onclick="signaturePad.clear()">ล้างลายเซ็น</button>
-<button class="btn btn-primary mt-2" onclick="submitReturn()">บันทึก</button>
+<canvas id="sigCanvas" height="220"></canvas>
+<div class="mt-2">
+<button class="btn btn-secondary btn-sm" onclick="signaturePad.clear()">ล้างลายเซ็น</button>
+<button id="saveReturnBtn" class="btn btn-primary btn-sm" onclick="submitReturn()">
+<span id="returnText">บันทึก</span>
+<span id="returnSpin" class="spinner-border spinner-border-sm d-none"></span>
+</button>
+</div>
 </div>
 </div>
 </div>
@@ -81,53 +88,34 @@ canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
 <script>
 const API_URL="https://script.google.com/macros/s/AKfycbxK4PsIqeO6C_v2n6MpqE1tEeT437DxrjVP7ywbV2Jk3IShxea1ClzfeLcNVSyxCb9F/exec";
 
+/* API */
 async function apiGet(a,p=""){return fetch(API_URL+"?action="+a+p).then(r=>r.json());}
 async function apiPost(d){return fetch(API_URL,{method:"POST",body:JSON.stringify(d)}).then(r=>r.json());}
 
 let globalData=[],currentFileId=null,signaturePad;
 
+/* INIT */
 window.onload=async()=>{
-signaturePad=new SignaturePad(document.getElementById("sigCanvas"));
+initSignature();
 await checkQRScan();
 await loadDashboard();
-}
+};
 
-/* ================= REGISTER PAGE ================= */
-
-async function checkQRScan(){
-const params=new URLSearchParams(window.location.search);
-const fileId=params.get("fileId");
-if(!fileId)return;
-
-const s=await apiGet("getStatus","&fileId="+fileId);
-
-if(!s.status||s.status=="returned"){
-registerPage.innerHTML=`
-<div class="card p-4 mt-3">
-<h5>ลงทะเบียนเสนอแฟ้ม ผอ.</h5>
-<div>รหัสแฟ้ม: <b>${fileId}</b></div>
-<input type="date" id="submitDate" class="form-control mt-2">
-<input id="proposer" class="form-control mt-2" placeholder="ผู้เสนอ">
-<textarea id="remark" class="form-control mt-2" placeholder="หมายเหตุ"></textarea>
-<button class="btn btn-primary mt-3" onclick="submitRegister('${fileId}')">ลงทะเบียน</button>
-</div>`;
-}
-}
-
-async function submitRegister(id){
-await apiPost({
-action:"register",
-fileId:id,
-submitDate:submitDate.value,
-proposer:proposer.value,
-remark:remark.value
+/* SIGNATURE HD */
+function initSignature(){
+const canvas=document.getElementById("sigCanvas");
+const ratio=Math.max(window.devicePixelRatio||1,1);
+canvas.width=canvas.offsetWidth*ratio;
+canvas.height=220*ratio;
+canvas.getContext("2d").scale(ratio,ratio);
+signaturePad=new SignaturePad(canvas,{
+minWidth:1,
+maxWidth:2.5,
+penColor:"#000"
 });
-alert("ลงทะเบียนสำเร็จ");
-window.location.href=window.location.pathname;
 }
 
-/* ================= DASHBOARD ================= */
-
+/* DASHBOARD */
 async function loadDashboard(){
 globalData=await apiGet("getAll");
 updateBadge();
@@ -145,38 +133,32 @@ bw.innerText=w;ba.innerText=a;br.innerText=r;ball.innerText=globalData.length;
 }
 
 function loadList(type){
+officerArea.innerHTML="";
 let data=type=="all"?globalData:globalData.filter(d=>d.status==type);
-let html=`<table class="table table-striped">
+
+let html=`<table class="table table-bordered">
 <thead><tr>
-<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>วันที่ออก</th><th>จัดการ</th>
+<th>รหัสแฟ้ม</th><th>วันที่เสนอ</th><th>ผู้เสนอ</th><th>สถานะ</th><th>จัดการ</th>
 </tr></thead><tbody>`;
+
 data.forEach(d=>{
 html+=`<tr>
 <td>${d.fileId}</td>
+<td>${d.submitDate||""}</td>
 <td>${d.proposer||""}</td>
 <td>${d.status}</td>
-<td>${d.outDate||""}</td>
 <td>
-${d.status=="waiting" && sessionStorage.getItem("user") ?
-`<input type="date" id="out_${d.fileId}">
-<button class="btn btn-success btn-sm" onclick="approve('${d.fileId}')">บันทึก</button>`:""}
-${d.status=="approved" ?
-`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
+${d.status=="approved"?`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
+${d.status=="returned"?`<button class="btn btn-outline-secondary btn-sm" onclick="viewSignature('${d.signature}')">ดูลายเซ็น</button>`:""}
 </td>
 </tr>`;
 });
+
 html+="</tbody></table>";
 listArea.innerHTML=html;
 }
 
-async function approve(id){
-const date=document.getElementById("out_"+id).value;
-await apiPost({action:"updateApproved",fileId:id,outDate:date});
-await loadDashboard();
-}
-
-/* ================= QR ================= */
-
+/* QR */
 function openQRModal(){
 new bootstrap.Modal(document.getElementById('qrModal')).show();
 generateFileId();
@@ -198,8 +180,8 @@ creator:"system"
 });
 
 qrBox.innerHTML="";
-let qr=new QRCode(qrBox,{
-text:location.origin+location.pathname+"?fileId="+currentFileId,
+new QRCode(qrBox,{
+text:window.location.href.split("?")[0]+"?fileId="+currentFileId,
 width:200,
 height:200
 });
@@ -209,12 +191,88 @@ let canvas=qrBox.querySelector("canvas");
 let url=canvas.toDataURL("image/png");
 qrAction.innerHTML=`
 <a href="${url}" download="${currentFileId}.png" class="btn btn-success btn-sm">ดาวน์โหลด</a>
-<button class="btn btn-primary btn-sm" onclick="window.print()">พิมพ์</button>`;
+<button onclick="window.print()" class="btn btn-primary btn-sm">พิมพ์</button>`;
 },300);
 }
 
-/* ================= RETURN ================= */
+/* REGISTER */
+async function checkQRScan(){
+const fileId=new URLSearchParams(window.location.search).get("fileId");
+if(!fileId)return;
 
+const s=await apiGet("getStatus","&fileId="+fileId);
+
+if(!s.status||s.status=="returned"){
+registerPage.innerHTML=`
+<div class="card p-4 mt-3">
+<h5>ลงทะเบียนเสนอแฟ้ม ผอ.</h5>
+<div>รหัสแฟ้ม: <b>${fileId}</b></div>
+<input type="date" id="submitDate" class="form-control mt-2">
+<input id="proposer" class="form-control mt-2" placeholder="ผู้เสนอ">
+<textarea id="remark" class="form-control mt-2" placeholder="หมายเหตุ"></textarea>
+<button class="btn btn-primary mt-3" onclick="submitRegister('${fileId}')">บันทึก</button>
+</div>`;
+}
+}
+
+async function submitRegister(id){
+await apiPost({
+action:"register",
+fileId:id,
+submitDate:submitDate.value,
+proposer:proposer.value,
+remark:remark.value
+});
+window.location.href=window.location.pathname;
+}
+
+/* OFFICER */
+function openOfficer(){
+if(!sessionStorage.getItem("user")){
+new bootstrap.Modal(document.getElementById('loginModal')).show();
+return;
+}
+loadOfficer();
+}
+
+async function loadOfficer(){
+listArea.innerHTML="";
+let waiting=globalData.filter(d=>d.status=="waiting");
+
+let html=`<h5>แฟ้มรอพิจารณา</h5>
+<table class="table table-bordered">
+<tr><th>รหัส</th><th>วันที่เสนอ</th><th>ผู้เสนอ</th><th>วันที่ออก</th><th></th></tr>`;
+
+waiting.forEach(d=>{
+html+=`
+<tr>
+<td>${d.fileId}</td>
+<td>${d.submitDate||""}</td>
+<td>${d.proposer}</td>
+<td><input type="date" id="out_${d.fileId}"></td>
+<td><button class="btn btn-success btn-sm" onclick="approve('${d.fileId}')">บันทึก</button></td>
+</tr>`;
+});
+html+="</table>";
+officerArea.innerHTML=html;
+}
+
+async function approve(id){
+const date=document.getElementById("out_"+id).value;
+await apiPost({action:"updateApproved",fileId:id,outDate:date});
+await loadDashboard();
+loadOfficer();
+}
+
+async function login(){
+const res=await apiPost({action:"login",phone:phone.value});
+if(res.success){
+sessionStorage.setItem("user",res.name);
+bootstrap.Modal.getInstance(document.getElementById('loginModal')).hide();
+}
+}
+
+/* RETURN */
 function openReturn(id){
 currentFileId=id;
 signaturePad.clear();
@@ -222,27 +280,28 @@ new bootstrap.Modal(document.getElementById('returnModal')).show();
 }
 
 async function submitReturn(){
+if(signaturePad.isEmpty()) return alert("กรุณาเซ็นก่อน");
+
+saveReturnBtn.disabled=true;
+returnSpin.classList.remove("d-none");
+
 await apiPost({
 action:"updateReturned",
 fileId:currentFileId,
 receiver:receiver.value,
-signature:signaturePad.toDataURL()
+signature:signaturePad.toDataURL("image/png",1)
 });
+
 bootstrap.Modal.getInstance(document.getElementById('returnModal')).hide();
 await loadDashboard();
+
+saveReturnBtn.disabled=false;
+returnSpin.classList.add("d-none");
 }
 
-function openLogin(){
-new bootstrap.Modal(document.getElementById('loginModal')).show();
-}
-
-async function login(){
-const res=await apiPost({action:"login",phone:phone.value});
-if(res.success){
-sessionStorage.setItem("user",res.name);
-loginBtn.innerText=res.name;
-bootstrap.Modal.getInstance(document.getElementById('loginModal')).hide();
-}
+function viewSignature(sig){
+let w=window.open();
+w.document.write('<img src="'+sig+'" style="width:100%">');
 }
 </script>
 
